Testing added for suma